--- a/templates/players_list.html
+++ b/templates/players_list.html
@@ -36,6 +36,7 @@
     <button class="btn btn-primary" type="submit">{{ _('Apply') }}</button>
     <a class="btn btn-outline-secondary" href="{{ url_for('list_players') }}">{{ _('Reset') }}</a>
     <a class="btn btn-outline-success" href="{{ url_for('export_csv') }}">{{ _('Export CSV') }}</a>
+    <a class="btn btn-outline-success" href="{{ url_for('export_players_zip') }}">⬇️ {{ _('Export All Profiles (ZIP)') }}</a>
   </div>
 </form>
 
